[tool.poetry]
name = "forecast-manager-api"
version = "0.1.0"
description = ""
authors = ["Stefan Bader <baderstefan@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.mypy]
strict = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
